alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
 }
 
 * {
-    background-color: rgb(20, 1, 20);
+    background-color: rgb(6, 1, 36);
     font-family: sans-serif, Arial, Helvetica, ;
 }
 
@@ -48,7 +48,7 @@ img {
 
 .carasol {
     padding: 10px 10px 10px 10px;
-    background: rgb(29, 28, 28);
+    background: rgb(7, 0, 0);
 }
 
 .betx-nav-div {
